manifest/demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app2
  template:
    metadata:
      labels:
        app: demo-app2
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/scheme: 'http'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '8088'
    spec:
      containers:
      - name: demo-app2
        image: registry.cn-shenzhen.aliyuncs.com/xiaoxitou/jvm-demo-app:v1.0.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: 300Mi
            cpu: 100m
          limits:
            memory: 300Mi
        ports:
        - name: http
          containerPort: 8080
        - name: jmx-metrics
          containerPort: 8088
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/scheme: 'http'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '8088'
    spec:
      containers:
      - name: demo-app
        image: registry.cn-shenzhen.aliyuncs.com/xiaoxitou/jvm-demo-app:v1.0.2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: 300Mi
            cpu: 100m
          limits:
            memory: 300Mi
        ports:
        - name: http
          containerPort: 8080
        - name: jmx-metrics
          containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    name: http
  - port: 8088
    protocol: TCP
    name: jmx-metrics
  selector:
    app: demo-app
