manifest/logstash.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/scheme: 'http'
        prometheus.io/path: '/metrics'
        # prometheus.io/port: '8088'
    spec:
      containers:
      - name: logstash
        image: registry.cn-shenzhen.aliyuncs.com/xiaoxitou/logstash@sha256:fe3b397d8381199021633c87cbb28465ccbbfe0b7bd6533f646cfdb35c737f0a
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: 2Gi
            cpu: 100m
          limits:
            memory: 2Gi
        ports:
        - name: http
          containerPort: 8080
        - name: json-metircs
          containerPort: 9600
        - name: jmx-metrics
          containerPort: 8088
        volumeMounts:
        - name: pipelines
          mountPath: /usr/share/logstash/config/pipelines.yml
          subPath: pipelines.yml
      - name: logstash-exporter
        image: kuskoman/logstash-exporter:v1.6.4
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 256Mi
        ports:
        - name: metrics
          containerPort: 9198
      volumes:
      - name: pipelines
        configMap:
          name: pipelines
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    name: http
  - port: 9600
    protocol: TCP
    name: json-metircs
  selector:
    app: logstash
